# ncxmms2

./: .gitignore  .travis.yml  AUTHORS  BUILDING  CMakeLists.txt  README  README.md  TODO  cppchecksuppressions.txt  ncxmms2.colors  ncxmms2.conf
src/: CMakeLists.txt  CommandLineOptions.cpp  CommandLineOptions.h  Hotkeys.h  Log.cpp  Log.h  Settings.cpp  Settings.h  Song.cpp  Song.h  SongDisplayFormatParser.cpp  SongDisplayFormatParser.h  Utils.cpp  Utils.h  activeplaylistwindow.cpp  activeplaylistwindow.h  commandlineoptions.cpp  commandlineoptions.h  config.h.in  headerwindow.cpp  headerwindow.h  hotkeys.h  localfilesystembrowser.cpp  localfilesystembrowser.h  log.cpp  log.h  main.cpp  mainwindow.cpp  mainwindow.h  notificationarea.cpp  notificationarea.h  playbackprogressbar.cpp  playbackprogressbar.h  playbackstatuswindow.cpp  playbackstatuswindow.h  playlistitemdelegate.cpp  playlistitemdelegate.h  playlistmodel.cpp  playlistmodel.h  playlistsbrowser.cpp  (+27 more)
src/ActivePlaylistWindow/: ActivePlaylistWindow.cpp  ActivePlaylistWindow.h
src/EqualizerWindow/: EqualizerBandsWindow.cpp  EqualizerBandsWindow.h  EqualizerPreampWindow.cpp  EqualizerPreampWindow.h  EqualizerWindow.cpp  EqualizerWindow.h
src/FileSystemBrowser/: AbstractFileSystemModel.h  Dir.cpp  Dir.h  FileSystemBrowser.cpp  FileSystemBrowser.h  FileSystemItemDelegate.cpp  FileSystemItemDelegate.h  FileSystemModel.cpp  FileSystemModel.h  FileSystemWatcher.cpp  FileSystemWatcher.h  LocalFileSystemBrowser.cpp  LocalFileSystemBrowser.h  ServerSideBrowser.cpp  ServerSideBrowser.h  ServerSideBrowserModel.cpp  ServerSideBrowserModel.h
src/HeaderWindow/: HeaderWindow.cpp  HeaderWindow.h
src/HelpBrowser/: HelpBrowser.cpp  HelpBrowser.h
src/ListViewAppIntegrated/: ListViewAppIntegrated.cpp  ListViewAppIntegrated.h
src/MainWindow/: MainWindow.cpp  MainWindow.h
src/MedialibBrowser/: AlbumsListModel.cpp  AlbumsListModel.h  ArtistsListModel.cpp  ArtistsListModel.h  MedialibBrowser.cpp  MedialibBrowser.h  SongsListModel.cpp  SongsListModel.h  TagValueListModel.cpp  TagValueListModel.h
src/PlaylistView/: PlaylistItemDelegate.cpp  PlaylistItemDelegate.h  PlaylistModel.cpp  PlaylistModel.h  PlaylistView.cpp  PlaylistView.h
src/PlaylistsBrowser/: PlaylistsBrowser.cpp  PlaylistsBrowser.h  PlaylistsListModel.cpp  PlaylistsListModel.h  PlaylistsListView.cpp  PlaylistsListView.h
src/SongInfoWindow/: SongInfoWindow.cpp  SongInfoWindow.h
src/StatusArea/: PlaybackProgressBar.cpp  PlaybackProgressBar.h  PlaybackStatusWindow.cpp  PlaybackStatusWindow.h  QuestionWindow.cpp  QuestionWindow.h  StatusArea.cpp  StatusArea.h
src/XmmsUtils/: Client.cpp  Client.h  Result.cpp  Result.h  Types.cpp  Types.h
src/activeplaylistwindow/: activeplaylistwindow.cpp  activeplaylistwindow.h
src/equalizerwindow/: equalizerbandswindow.cpp  equalizerbandswindow.h  equalizerpreampwindow.cpp  equalizerpreampwindow.h  equalizerwindow.cpp  equalizerwindow.h
src/filesystembrowser/: abstractfilesystemmodel.h  dir.cpp  dir.h  filesystembrowser.cpp  filesystembrowser.h  filesystemitemdelegate.cpp  filesystemitemdelegate.h  filesystemmodel.cpp  filesystemmodel.h  filesystemwatcher.cpp  filesystemwatcher.h  localfilesystembrowser.cpp  localfilesystembrowser.h  serversidebrowser.cpp  serversidebrowser.h  serversidebrowsermodel.cpp  serversidebrowsermodel.h
src/headerwindow/: headerwindow.cpp  headerwindow.h
src/helpbrowser/: helpbrowser.cpp  helpbrowser.h
src/lib/: Application.cpp  Application.h  CMakeLists.txt  CheckBox.cpp  CheckBox.h  Colors.h  Exceptions.h  HtmlParser.cpp  HtmlParser.h  IniParser.cpp  IniParser.h  KeyEvent.cpp  KeyEvent.h  Label.cpp  Label.h  LineEdit.cpp  LineEdit.h  ListItemPaintOptions.h  ListModel.cpp  ListModel.h  ListModelItemData.h  ListModelItemDelegate.cpp  ListModelItemDelegate.h  ListView.cpp  ListView.h  MouseEvent.cpp  MouseEvent.h  Object.cpp  Object.h  Painter.cpp  Painter.h  Painter_p.h  Palette.cpp  Palette.h  Point.h  RadioButtonGroupBox.cpp  RadioButtonGroupBox.h  Rectangle.h  Signals.cpp  Signals.h  (+74 more)
src/listviewappintegrated/: listviewappintegrated.cpp  listviewappintegrated.h
src/localfilesystembrowser/: filesystemitemdelegate.cpp  filesystemitemdelegate.h  filesystemmodel.cpp  filesystemmodel.h  filesystemwatcher.cpp  filesystemwatcher.h  localfilesystembrowser.cpp  localfilesystembrowser.h
src/mainwindow/: mainwindow.cpp  mainwindow.h
src/medialibbrowser/: albumslistmodel.cpp  albumslistmodel.h  artistslistmodel.cpp  artistslistmodel.h  medialibbrowser.cpp  medialibbrowser.h  songslistmodel.cpp  songslistmodel.h
src/playlistsbrowser/: playlistsbrowser.cpp  playlistsbrowser.h  playlistslistmodel.cpp  playlistslistmodel.h  playlistslistview.cpp  playlistslistview.h
src/playlistview/: playlistitemdelegate.cpp  playlistitemdelegate.h  playlistmodel.cpp  playlistmodel.h  playlistview.cpp  playlistview.h
src/songinfowindow/: songinfowindow.cpp  songinfowindow.h
src/statusarea/: playbackprogressbar.cpp  playbackprogressbar.h  playbackstatuswindow.cpp  playbackstatuswindow.h  questionwindow.cpp  questionwindow.h  statusarea.cpp  statusarea.h
src/xmmsutils/: client.cpp  client.h  result.cpp  result.h  types.cpp  types.h
tests/: CMakeLists.txt  main.cpp  test_dir.cpp  test_expected.cpp  test_stringalgo.cpp
